[metadata]
name = Flask-OneAuth
version = 0.1.0
description = Centralised & pluggable user management facility.
long_description = file: README.rst
url =
author = EC
author_email = ceduth@techoutlooks.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >=3.6
package_dir =
    = src
packages = find:
install_requires =

    environs
    phonenumbers
    psycopg2-binary
    Flask
    Flask-Bcrypt
    Flask-Dance[sqla]
    Flask-Login
    Flask-SQLAlchemy
    PyJWT
    SQLAlchemy-Utils



[options.packages.find]
where = src
